--- a/index.html
+++ b/index.html
@@ -2,369 +2,118 @@
 <html lang="en">
 
 <head>
-    <div class="snowfall - container"></div>
-    <link rel="shortcut icon" href="youricon.png" type="image/x-png">
-    <link rel="png" href="youricon.png" type="image/x-png">
-    <meta charset="UTF - 8">
-    <meta name="viewport" content="1=device-width, initial-scale=1.0">
-    <title>Cshea Company</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <style>
-        /* 全局样式 */
-        body {
-            font-family: 'Roboto', Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            background-image: url('https://create.codelab.club/thumbnail/FpTWk6b6aX3DnYlFh1E0clXCJU_T.png');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-        }
-                   /* 创建雪花的样式 */
-         .snowflake {
-               width: 10px;
-               height: 10px;
-               background - color: white;
-               border - radius: 50%;
-               position: absolute;
-               opacity: 0.8;
-           }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cshea Company</title>
+  <style>
+    /* 全局样式 */
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
 
-           /* 雪花容器的样式 */
-         .snowfall - container {
-               width: 100%;
-               height: 100vh;
-               position: relative;
-               overflow: hidden;
-           }
+    /* 头部样式 */
+    header {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
 
-           /* 定义雪花飘落的动画关键帧 */
-           @keyframes snowfall {
-               0% {
-                   top: -10px;
-                   opacity: 0;
-                   transform: translateX(calc(random()*100vw));
-               }
+    /* 每个章节的通用样式 */
+    section {
+      background-color: white;
+      margin: 20px;
+      padding: 20px;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    }
 
-               50% {
-                   opacity: 0.8;
-               }
+    /* 章节标题样式 */
+    h2 {
+      color: #333;
+      border-bottom: 2px solid #333;
+      padding-bottom: 10px;
+    }
 
-               100% {
-                   top: 110vh;
-                   opacity: 0;
-                   transform: translateX(calc(random()*100vw));
-               }
-           }
+    /* 列表样式 */
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
 
-           /* 创建多个雪花并应用动画 */
-           @for $i from 1 through 100 {
-             .snowflake - #{$i} {
-                   animation: snowfall #{(random(5, 15))}s linear infinite;
-               }
-           }
-        /* 头部样式 */
-        header {
-            background: linear-gradient(135deg, #007BFF, #0056b3);
-            color: white;
-            text-align: center;
-            padding: 30px;
-            position: relative;
-            animation: fadeInDown 1s;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
+    /* 列表项样式 */
+    li {
+      margin-bottom: 10px;
+      padding-left: 20px;
+      position: relative;
+    }
 
-        header h1 {
-            margin: 0;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
+    /* 列表项的项目符号自定义样式 */
+    li::before {
+      content: "•";
+      position: absolute;
+      left: 0;
+      color: #333;
+    }
 
-        /* 公司简介部分样式 */
-        #about {
-            padding: 30px;
-            margin: 30px;
-            background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            transition: transform 0.3s ease - in - out;
-        }
+    /* 链接样式 */
+    a {
+      color: #0066cc;
+      text-decoration: none;
+    }
 
-        #about:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* 悬停时阴影增强 */
-            border-color: #FFD700; /* 悬停时边框颜色改变 */
-        }
-
-        /* 在公司简介中为编程语言添加图标 */
-        #about p:contains("Python")::after {
-            content: '\f189';
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            margin-left: 5px;
-            color: #FFD700;
-        }
-
-        #about p:contains("Java")::after {
-            content: '\f0f4';
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            margin-left: 5px;
-            color: #FFD700;
-        }
-
-        #about p:contains("C language")::after {
-            content: '\f121';
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            margin-left: 5px;
-            color: #FFD700;
-        }
-
-        /* 服务列表样式 */
-        #services {
-            padding: 30px;
-            margin: 30px;
-            background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            transition: transform 0.3s ease - in - out;
-            background-color: #E6F7FF; /* 淡蓝色背景 */
-        }
-
-        #services:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        ul li {
-            margin-bottom: 10px;
-            padding: 10px;
-            border-bottom: 1px solid #eee;
-            transition: background - color 0.3s ease - in - out;
-        }
-
-        ul li:hover {
-            background-color: #f9f9f9;
-            color: #007BFF; /* 悬停时文字颜色改变 */
-        }
-
-        ul li::before {
-            content: '\f085';
-            font-family: 'Font Awesome 5 Free';
-            font-weight: 900;
-            margin-right: 10px;
-            color: #007BFF;
-        }
-
-        ul li:hover::before {
-            transform: scale(1.2); /* 悬停时图标放大 */
-            color: #FFD700;
-        }
-
-        /* 联系信息样式 */
-        #contact {
-            padding: 30px;
-            margin: 30px;
-            background-color: rgba(255, 255, 255, 0.9);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 10px;
-            transition: transform 0.3s ease - in - out;
-            background-color: #F4F4F4; /* 淡灰色背景 */
-        }
-
-        #contact:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 10xrgba(0, 0, 0, 0.3);
-        }
-
-        /* 动画效果 */
-        @keyframes fadeInDown {
-            0% {
-                opacity: 0;
-                transform: translateY(-20px);
-            }
-
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
-
-            to {
-                opacity: 1;
-            }
-        }
-
-        @keyframes rotate {
-            from {
-                transform: rotate(0deg);
-            }
-
-            to {
-                transform: rotate(360deg);
-            }
-        }
-
-        /* 页尾样式 */
-        footer {
-            background: linear-gradient(135deg, #007BFF, #0056b3);
-            color: white;
-            text-align: center;
-            padding: 20px;
-            margin-top: 30px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        footer p {
-            margin: 0;
-        }
-
-        /* 加载动画样式 */
-        #loader {
-            border: 12px solid #f3f3f3;
-            border-top: 12px solid #007BFF;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            animation: spin 2s linear infinite;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            margin-top: -50px;
-            marginLeft: -50px;
-            z-index: 9999;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg);
-            }
-
-            100% {
-                transform: rotate(360deg);
-            }
-        }
-
-        /* 页面角落的动画元素样式 */
-        #fun-element {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 30px;
-            height: 30px;
-            background-color: #007BFF;
-            border-radius: 50%;
-            animation: blink 2s linear infinite;
-        }
-
-        @keyframes blink {
-            0% {
-                opacity: 0.5;
-            }
-
-            50% {
-                opacity: 1;
-            }
-
-            100% {
-                opacity: 0.5;
-            }
-        }
-
-        /* 鼠标悬停彩蛋区域样式 */
-        #egg-area {
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 50px;
-            height: 50px;
-            background-color: rgba(0, 0, 0, 0.1);
-        }
-
-        #egg-area:hover::after {
-            content: "你发现了一个彩蛋！点击这里查看更多有趣内容。";
-            position: absolute;
-            top: -30px;
-            left: 0;
-            color: white;
-            background-color: rgba(0, 0, 0, 0.5);
-            padding: 5px;
-            border-radius: 5px;
-        }
-
-        /* 分享按钮样式 */
-        #share-button {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #FFD700;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background - color 0.3s ease - in - out;
-        }
-
-        #share-button:hover {
-            background-color: #FFA500;
-        }
-    </style>
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 
 <body>
-    <div id="loader"></div>
-    <!-- 头部 -->
-    <header>
-        <h1>Cshea Company</h1>
-    </header>
-    <!-- 公司简介 -->
-    <section id="about">
-        <h2>About Us</h2>
-        <p>Cshea is a new micro-company focused on programming and developing software tools. Although there are no products available at present, it is full of vitality and ambition.</p>
-        <p>Programming is the cornerstone of our software tools. It is a magical art, a process of deep thinking and creation. Our programmers use various programming languages, from the classic C language to modern Python and Java for cross-platform development, carefully crafting each line of code to build the underlying architecture, user interface, and optimize algorithms, transforming complex business logic into instructions that computers can understand and execute.</p>
-        <p>We understand the power of software tools and their significant role in various fields. We aim to create a series of software tools that will bring about changes in different areas. Our team members come from diverse backgrounds, united by their passion for programming and software tools. The team consists of experienced senior programmers and innovative young talents. We emphasize cooperation and sharing, through brainstorming, sharing of experiences and techniques, and showcasing creative sketches, we consider and improve the software tools from multiple perspectives.</p>
-        <p>We also face many challenges. In the technical field, programming technologies are evolving rapidly. We address this by establishing a technical mechanism, including regular participation in technical training, following industry trends, and engaging in open-source projects. In the market, the software tools market is highly competitive. We focus on niche areas, exploring unmet user needs, and providing personalized and professional software tools to stand out.</p>
-        <p>In the future, we plan to introduce software tool products starting from some small but well-defined fields, such as data analysis tools for specific industries. As the company grows, we will expand our product line, build a complete software tool ecosystem, and engage in合作， including technical cooperation with large enterprises and resource sharing with small start-ups, continuously advancing in the journey of software tool development.</p>
-    </section>
-    <!-- 服务列表 -->
-    <section id="services">
-        <h2>Our Services (Future Outlook)</h2>
-        <ul>
-            <li>Develop software products such as data analysis tools for specific industries.</li>
-            <li>Build a complete software tool ecosystem to enable collaboration between different software tools.</li>
-            <li>Provide technical cooperation and resource sharing services.</li>
-        </ul>
-    </section>
-    <!-- 联系信息 -->
-    <section id="contact">
-        <h2>Contact Us</h = "Contact Us">
-        <p>Email: 3630946614@qq.com</p>
-        <p>Phone+86: 18155667125</p>
-    </section>
-    <!-- 页尾 -->
-    <footer>
-        <p>&copy; 2023 Cshea Company. All rights reserved.</p>
-    </footer>
-    <script>
-        window.onload = function () {
-            var loader = document.getElementById('loader');
-            loader.style.display = 'none';
-        };
-    </script>
+  <header>
+    <h1>Cshea Company</h1>
+  </header>
+  <section>
+    <h2>About Us</h2>
+    <p>Cshea is a new micro-company focused on programming and developing software tools. Although there are no products
+      available at present, it is full of vitality and ambition.</p>
+    <p>Programming is the cornerstone of our software tools. It is a magical art, a process of deep thinking and
+      creation. Our programmers use various programming languages, from the classic C language to modern Python and
+      Java for cross-platform development, carefully crafting each line of code to build the underlying architecture,
+      user interface, and optimize algorithms, transforming complex business logic into instructions that computers
+      can understand and execute.</p>
+    <p>We understand the power of software tools and their significant role in various fields. We aim to create a series
+      of software tools that will bring about changes in different areas. Our team members come from diverse
+      backgrounds, united by their passion for programming and software tools. The team consists of experienced senior
+      programmers and innovative young talents. We emphasize cooperation and sharing, through brainstorming, sharing
+      of experiences and techniques, and showcasing creative sketches, we consider and improve the software tools from
+      multiple perspectives.</p>
+    <p>We also face many challenges. In the technical field, programming technologies are evolving rapidly. We address
+      this by establishing a technical mechanism, including regular participation in technical training, following
+      industry trends, and engaging in open-source projects. In the market, the software tools market is highly
+      competitive. We focus on niche areas, focusing on unmet user needs, and providing personalized and professional
+      software tools to stand out.</p>
+    <p>In the future, we plan to introduce software tool products starting from some small but well-defined fields,
+      such as data analysis tools for specific industries. As the company grows, we will expand our product line, build
+      a complete software tool ecosystem, and engage in cooperation, including technical cooperation with large
+      enterprises and resource sharing with small start-ups, continuously advancing in the journey of software tool
+      development.</p>
+  </section>
+  <section>
+    <h2>Our Services (Future Outlook)</h2>
+    <ul>
+      <li>Develop software products such as data analysis tools for specific industries.</li>
+      <li>Build a complete software tool ecosystem to enable collaboration between different software tools.</li>
+      <li>Provide technical cooperation and resource sharing services.</li>
+    </ul>
+  </section>
+  <section>
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:3630946614@qq.com">3630946614@qq.com</a></p>
+    <p>Phone+86: <a href="tel:18155667125">18155667125</a></p>
+  </section>
 </body>
 
 </html>
